# Atanua

./: .gitignore  makefile
src/: CMakeLists.txt  makefile  tinyxml
src/8051/: CMakeLists.txt
src/basecode/: CMakeLists.txt
src/chip/: CMakeLists.txt
src/chipverilog/: CMakeLists.txt  Makefile  andverilog.cpp  andverilog.v  chip7400vlg.cpp  chip7400vlg.v  chip7402vlg.cpp  chip7402vlg.v  chip7404vlg.cpp  chip7404vlg.v  chip7408vlg.cpp  chip7408vlg.v  chip7411vlg.cpp  chip7411vlg.v  chip74153vlg.cpp  chip74153vlg.v  chip7421vlg.cpp  chip7421vlg.v  chip7432vlg.cpp  chip7432vlg.v  chip74377vlg.cpp  chip74377vlg.v  chip7474vlg.cpp  chip7474vlg.v  chip7486vlg.cpp  chip7486vlg.v  ffverilog.cpp  ffverilog.v  latchverilog.cpp  latchverilog.v  orverilog.cpp  orverilog.v  tristate_buffer.cpp  tristate_buffer.v  twolatchverilog.cpp  twolatchverilog.v  verilog-v-src
src/cmake/: Verilator.cmake  Verilator.cmake-ORIG
src/core/: CMakeLists.txt  basechipfactory.cpp  checknet.cpp  main.cpp  nativefunctions.cpp  simutils.cpp  wire.cpp
src/glee/: CMakeLists.txt  GLee.h
src/include/: andverilog.h  atanua_internal.h  checknet.h  chip7400vlg.h  chip7402vlg.h  chip7404vlg.h  chip7408vlg.h  chip7411vlg.h  chip74153vlg.h  chip7421vlg.h  chip7432vlg.h  chip74377vlg.h  chip7474vlg.h  chip7486vlg.h  ffverilog.h  latchverilog.h  orverilog.h  toolkit.h  tristate_buffer.h  twolatchverilog.h
src/plugin/: atanua_dll_interface.h  plugintest.cpp  readme.txt
src/schoolmips/: .gitignore  CMakeLists.txt  marsohod.cpp  marsohod.h  marsohod.v  sm_register_we.v  sm_top.v
src/stb/: CMakeLists.txt
src/tests/: 16seg.atanua  2051.atanua  27xx.atanua  309.atanua  3_input_logic.atanua  7400.atanua  7402.atanua  7404.atanua  7408.atanua  7410.atanua  74138.atanua  74139.atanua  74151.atanua  74153.atanua  74154.atanua  74163.atanua  74164.atanua  74165.atanua  74181.atanua  74191.atanua  74192.atanua  74193.atanua  74195.atanua  7420.atanua  74240.atanua  74241.atanua  74244.atanua  74245.atanua  74283.atanua  7432.atanua  7447.atanua  74574.atanua  7473.atanua  7474.atanua  7485.atanua  7486.atanua  7489.atanua  7490.atanua  8_input_logic.atanua  audio.atanua  (+18 more)
src/tests/contrib/: jk_nand.atanua  parallel-to-serial_register.atanua  serial-to-parallel_register.atanua  xor.atanua
src/tests/contrib/platform_jumper/: 16_bit_memory_file.atanua  16_bit_memory_update.atanua  16_way_logic_switch.atanua  1_bit_DEMUX.atanua  1_bit_MUX.atanua  4_bit_binary_to_one_hot.atanua  4x4_LED_Driver.atanua  6_Line_2bit_Mux.atanua  8x8_LED_Driver.atanua  PlatformJumper.atanua  README.txt  README.txt.bak  control.atanua  entity_collider.atanua  entity_pos_control_3bit.atanua  platform_gen.atanua  platform_seq.atanua  player_3bit.atanua  player_grav.atanua  pulser.atanua  random_gen.atanua  score.atanua  sequence_controller.atanua  sequencer.atanua  update_sig.atanua
src/tests/plugin/: k8055.atanua  plugintest.atanua
src/tinyxml_2_5_3/tinyxml/: CMakeLists.txt
